# procedural-generation-practical

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: run-ci.yml
tests/: test_main.py
